--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "hwencc.html-tag-wrapper",
-    "jkjustjoshing.vscode-text-pastry"
+    "jkjustjoshing.vscode-text-pastry",
+    "tabnine.tabnine-vscode"
   ]
 }
