--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cSpell.language": "en,de-DE",
-    "prettier.tabWidth": 2
+    "prettier.tabWidth": 2,
+    "svg.preview.background": "transparent"
 }
