--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,6 +30,10 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run a one-line script
         run: bash getCounter.sh
+      - name: setup Github1
+        run: git config --global user.email "j.technology@web.de"
+      - name: setup Github2
+        run: git config --global user.name "namedmichi"
       - name: check for changes
         run: git status
       - name: stage changed files
