--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,7 +36,7 @@ jobs:
             hub config --global user.email "j.technology@web.de"
             hub config --global user.name "namedmichi"
             export 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=$token
-            hub remote set-url origin https://$token:x-oauth-basic@github.com/$username/$repo.git
+            hub remote set-url origin https://$token:x-oauth-basic@github.com/namedmichi/workspacestudio.git
             git status
             git add .
             git commit -m "update Stats"
