--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,10 +36,10 @@ jobs:
             hub config --global hub.protocol https
             hub config --global user.email "j.technology@web.de"
             hub config --global user.name "namedmichi"
-            export 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=$token
-            hub remote set-url origin https://$token:x-oauth-basic@github.com/namedmichi/workspacestudio.git
+            export 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=$token
+            hub remote set-url origin https://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:x-oauth-basic@github.com/namedmichi/workspacestudio.git
             git status
             git add .
             git commit -m "update Stats"
             git fetch origin master
-            git push origin HEAD:master
+            hub push origin HEAD:master
