--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,6 +28,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v1
+      - uses: JamesIves/github-pages-deploy-action@v4.4.0
+        with:
+             token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run a one-line script
         run: bash getCounter.sh
       - name: setup Github1
