--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -37,7 +37,7 @@ jobs:
             hub config --global user.email "j.technology@web.de"
             hub config --global user.name "namedmichi"
             export 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=$token
-            hub remote set-url origin https://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:github.com/namedmichi/workspacestudio
+            hub remote set-url origin https://github.com/namedmichi/workspacestudio
             git status
             git add .
             git commit -m "update Stats"
