--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,14 +32,13 @@ jobs:
         run: bash getCounter.sh
       - name: setup Github1
         run: |
-            git config --global credential.helper 'cache --timeout 3600'
             hub config --global hub.protocol https
             hub config --global user.email "j.technology@web.de"
             hub config --global user.name "namedmichi"
             export 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=$token
             hub remote set-url origin https://github.com/namedmichi/workspacestudio
-            git status
-            git add .
-            git commit -m "update Stats"
-            git fetch origin master
+            hub status
+            hub add .
+            hub commit -m "update Stats"
+            hub fetch origin master
             hub push origin HEAD:master
