--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,7 +36,7 @@ jobs:
             git config --global user.email "j.technology@web.de"
             git config --global user.name "namedmichi"
             export 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=$token
-            hub remote set-url origin https://github.com/namedmichi/workspacestudio.git
+            hub remote set-url origin https://x-access-token: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@github.com/$GITHUB_REPOSITORY
             hub status
             hub add .
             hub commit -m "update Stats"
