--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,12 +30,12 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run a one-line script
         run: bash getCounter.sh
-      - name: setup Github1
+      - name: setup Github1 
         run: |
             git config --global user.email "j.technology@web.de"
             git config --global user.name "namedmichi"
-            export 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=$token
-            git remote set-url origin https://x-access-token:1324i1324I!@github.com/$GITHUB_REPOSITORY
+            export ${{ secrets.GITHUB_TOKEN }}=$token
+            git remote set-url origin https://x-access-token:$token@github.com/$GITHUB_REPOSITORY
             git status
             git add .
             git commit -m "update Stats"
