--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,14 +30,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run a one-line script
         run: bash getCounter.sh
-      - name: setup Github1 
-        run: |
-            git config --global user.email "j.technology@web.de"
-            git config --global user.name "namedmichi"
-            export ${{ secrets.GITHUB_TOKEN }}=$token
-            git remote set-url origin https://x-access-token:$token@github.com/$GITHUB_REPOSITORY
-            git status
-            git add .
-            git commit -m "update Stats"
-            git fetch origin master
-            git push origin HEAD:master
+      - name: Push to git
+        uses: mikeal/publish-to-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
