--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,18 +5,8 @@ name: RefrehStats
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
-  workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: false
-        # The data type of the input
-        type: string
+  schedule:
+    - cron: "0 0 * * 1"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
