--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,26 +1,50 @@
-# This is a basic workflow that is manually triggered
-
-name: RefrehStats
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+name: Count Stats
 on:
-  schedule:
-    - cron: "0 0 * * 1"
+  workflow_dispatch:
+    inputs:
+      manual_trigger:
+        description: 'Manually trigger the stats count'
+        type: bool
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  count-stats:
     runs-on: ubuntu-latest
-    
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v1
-      - name: Run a one-line script
-        run: bash getCounter.sh
-      - name: Push to git
-        uses: mikeal/publish-to-github-action@master
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install required tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cloc
+          pip install wc
+
+      - name: Count stats
+        run: |
+          # Count lines, characters, and words for specific file types
+          cloc --exclude-dir=.git --include-lang=JavaScript,HTML,CSS,TypeScript,Python,Java,SCSS,Sass .
+          find . -type f \( -name "*.js" -o -name "*.jsx" -o -name "*.html" -o -name "*.css" -o -name "*.ts" -o -name "*.py" -o -name "*.java" -o -name "*.scss" -o -name "*.sass" \) -exec wc -l -c -w {} + > stats.txt
+
+      - name: Upload stats
+        uses: actions/upload-artifact@v2
+        with:
+          name: stats
+          path: stats.txt
+
+      - name: Check for changes in stats.txt
+        id: check-changes
+        run: |
+          if git diff --exit-code stats.txt; then
+            echo "No changes in stats.txt"
+            exit 0
+          fi
+
+      - name: Commit and push stats.txt
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add stats.txt
+          git commit -m "Update stats.txt"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
